# harfanglab_test

harfanglab_app/: .gitignore  README.md  main.py  manage.py  pyproject.toml
harfanglab_app/games/: admin.py  models.py  serializers.py  urls.py  views.py
harfanglab_app/games/management/commands/: load_sample_data.py
harfanglab_app/games/migrations/: 0001_initial.py
harfanglab_app/harfanglab_app/: asgi.py  settings.py  urls.py  wsgi.py
